# tfe24-2

./: CMakeLists.txt
exercise-000/: README.md  main.cpp
exercise-001/: README.md  main.cpp
exercise-002/: README.md  main.cpp
exercise-003/: README.md  main.cpp
exercise-004/: CMakeLists.txt  README.md  config.h.in  main.cpp  point.cpp  point.hpp
exercise-005/: CMakeLists.txt  main.cpp  point.hpp
exercise-005/include/: point.hpp
exercise-005/tests/: 001-TestCase.cpp  CMakeLists.txt  test_point.cpp
exercise-006/: CMakeLists.txt  README.md  main.cpp
exercise-006/include/: point.hpp  point_fmt.hpp
exercise-006/tests/: 001-TestCase.cpp  CMakeLists.txt  test_point_template_cpp17.cpp
exercise-010/: README.md  main.cpp  myvector.cpp  myvector.hpp
exercise-011/: CMakeLists.txt  config.h.in  main.cpp
libs/point/: CMakeLists.txt  README.md
libs/point/include/point/: point.hpp
libs/point/src/: point.cpp
